--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
                     </execution>
                 </executions>
             </plugin>
+               <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.11.2</version>
+                <configuration>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
