--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,23 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
+    {
+      "type": "java",
+      "name": "StreamerServer",
+      "request": "launch",
+      "mainClass": "com.example.App",
+      "projectName": "my-app",
+      "args": ["STREAMER","SERVER"]
+    },
+    {
+      "type": "java",
+      "name": "StreamerClient",
+      "request": "launch",
+      "mainClass": "com.example.App",
+      "projectName": "my-app",
+      "args": ["STREAMER","CLIENT"]
+    },
     {
       "type": "java",
       "name": "Launch with Arguments Prompt",
